--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Hello Vamsi Krishna </h1>
-    <h2>Hii krishna</h2>
-    <h3>Hii developers creating merge conflict</h3>
+    <h4>viki</h4>
 </body>
 </html>
